--- a/main.html
+++ b/main.html
@@ -10,7 +10,20 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+<div id="container" >
+	<div id="image"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRr9RnUdSkkM7e36uCtZm_47lnSK5RdutjqEw6ELLUZ73RskO54k9KFRDZodrqOAz7V_VM&usqp=CAU">
+			</div>
+	<h1>Pricing Card</h1>
+	<p>Price: Rs.200</p>
+	<p>Description: Lorem ipsum dolor sit smet, consectetur adipiscing elit.</p>
+	<button>Buy Now</button>
+	   
+	   <div id="price"></div>
+	   <div id="des"></div>
+		<div id="buy"></div>
+		
 
+</div>
 </body>
 
 </html>
